--- a/wetaca/pubspec.yaml
+++ b/wetaca/pubspec.yaml
@@ -29,9 +29,11 @@ environment:
 dependencies:
   bloc: ^8.1.0
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_secure_storage: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
