--- a/wetaca/pubspec.yaml
+++ b/wetaca/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_secure_storage: ^6.1.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
