--- a/wetaca/android/app/build.gradle
+++ b/wetaca/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -61,7 +61,11 @@ android {
         }
     }
 }
-
+android {                                                                                    
+   defaultConfig {                                                                             
+     minSdkVersion 18                                            
+   }                                                                                           
+ } 
 flutter {
     source '../..'
 }
