--- a/wetaca/pubspec.yaml
+++ b/wetaca/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  email_validator: '^2.1.16'
   bloc: ^8.1.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
@@ -35,6 +36,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_secure_storage: ^6.1.0
   http: ^0.13.5
+ 
+    
 
 dev_dependencies:
   flutter_lints: ^2.0.0
